Adding art for feb 25

--- a/newsletter/2024-02-25.md
+++ b/newsletter/2024-02-25.md
@@ -1,59 +1,48 @@
-<!--
-
-Draft social posts...
-
-- Tweet NYT column on empathy: https://www.nytimes.com/2024/02/18/opinion/radical-empathy-fiction.html
-
-- Columbia b-school prof TKTTK on #crypto as "generational revenge." https://fortune.com/crypto/2024/02/09/driving-current-crypto-boom-intergenerational-revenge/
-
--->
-
-# tktk
+# Why so many Benjamins, America?
 ## Feb. 18-24, 2024
 
-![]()
-*Photo by tktk*
+![Collage of $100 bills](https://images.unsplash.com/photo-1593672755342-741a7f868732)
+*Photo by Giorgio Trovato on Unsplash*
 
-<!--
+**The $100 bill** is now America's most popular cash denomination, with more of them in circulation than even the venerable $1 note bearing George Washington's likeness.
 
-Lede item. Stick to ~450 words. Some possibilities...
+So says the Wall Street Journal's Oyin Adedoyin in a [new story](https://www.wsj.com/personal-finance/american-dollar-currency-100-bill-c6a47c79?st=02dgeljm8vby6zg&reflink=desktopwebshare_permalink) about the [c-note](https://www.investopedia.com/terms/c/c-note.asp)'s meteoric rise. Adedoyin reports that more than half the supply of $100 bills is held abroad, and there are enough $100 bills circulating in the U.S. for every living citizen to have 55 of them.
 
-- Is there "home bias" in tech? https://www.coindesk.com/consensus-magazine/2023/12/19/how-asia-drives-the-next-crypto-bull-market/
+Let it also suffice that all these bills aren't being spent to treat someone's local Little League team at McDonald's.
 
-- Assange extradition: Who are these dead people?
 
-- Market concentration: Galloway had a great riff on this in his podcast. Software is digesting the world.
-
--->
 
 # Week in Review
 
-- Adds: <!-- Have Leo take a crack at these... --> https://www.wsj.com/finance/currencies/crypto-tycoon-do-kwon-should-be-extradited-to-u-s-montenegro-court-rules-829bb548 | https://www.reuters.com/technology/texas-crypto-company-sues-sec-overreach-digital-assets-2024-02-21/ | https://blockworks.co/news/crypto-deepfakes-x-twitter-failing | https://www.coindesk.com/business/2024/02/22/crypto-for-advisors-bitcoins-4th-halving-is-approaching/
-
 - **Ether's price rallied above $3,000** for the first time in nearly two years. The buying was fueled in part by rising optimism that an exchange-traded fund on the token will be approved by U.S. regulators this year. ([Cointelegraph](https://cointelegraph.com/news/ethereum-eth-price-hits-3k-for-the-first-time-since-2022))
+
+- **Bitcoin was steady for the week versus the U.S. dollar,** recently trading above $51,000 per token. But rising institutional demand this year, combined with fluctuations in conventional foreign exchange markets, have recently pushed bitcoin's price to fresh all-time highs in terms of the local currencies of 14 countries. Combined, those countries have a population over 1 billion people and gross domestic product over $7 trillion a year, according to a [Twitter thread](https://twitter.com/balajis/status/1760638270462104048) Thursday by crypto investor Balaji Srinivasan. Wow...
+
+- **A Finnish software engineer** shared via GitHub a trove of previously unpublished emails between himself and mysterious bitcoin founder Satoshi Nakamoto. The messages offered a new window into Satoshi's thoughts during the early days of bitcoin development, including observations on potential regulation, energy consumption and other issues. ([Unchained](https://unchainedcrypto.com/satoshis-emails-to-a-bitcoin-co-developer-the-5-most-revealing-quotes/))
+
+- **Solana updates:** Farcaster, a decentralized social platform, has [added support](https://www.theblock.co/post/278797/farcaster-solana) for Solana. That network's native token, which trades under the ticker SOL, is now the world's fifth-largest by market valuation, according to [CoinMarketCap](https://coinmarketcap.com/currencies/solana/). Meanwhile, CoinDesk [reports](https://www.coindesk.com/culture/2023/02/15/apple-vision-pros-are-practically-dress-code-at-this-crypto-hacker-house) that Solana developers in Salt Lake City have been enthusiastic early users of Apple's expensive new headset, the Vision Pro.
 
 - **Circle announced** it will [phase out support](https://www.circle.com/blog/circle-is-discontinuing-support-for-usdc-on-the-tron-blockchain) for its USDC stablecoin on the TRON network due to the requirements of its internal risk-management framework.
 
 - **Polygon's MATIC token**, a standout in the last crypto bull market, has fallen out of favor during the rally of early 2024. ([CoinDesk](https://www.coindesk.com/markets/2024/02/21/polygons-matic-has-fallen-out-of-favour-with-crypto-investors-heres-why/))
 
-- **AI updates:** According to the New York Times, Anthropic has [raised $7.3 billion](https://www.nytimes.com/2024/02/20/technology/anthropic-funding-ai.html) in venture money and now carries a $15 billion valuation. However, some of the capital carries conditions that Anthropic spend with its own investors on products such as chips and cloud hosting. Separately, Decrypt [reports](https://decrypt.co/218258/microsoft-invests-2-billion-in-ai-cloud-in-spain) that Microsoft is investing $2.1 billion in Spain over the next two years to expand its artificial intelligence and cloud infrastructure.
-
-<!-- Update later in the week, adding in exchange response, etc. -->
-- **The exchange FixedFloat suffered a security breach** in which nearly $26 million in bitcoin and ether was stolen from customer accounts.  ([The Merkle](https://themerkle.com/cryptocurrency-exchange-fixedfloat-compromised-millions-lost-in-ethereum-and-bitcoin/))
-
 - **CME Group**, operator of the Chicago Mercantile Exchange, [announced](https://www.cmegroup.com/media-room/press-releases/2024/2/20/cme_group_to_launchmicroeuro-denominatedbitcoinandetherfutureson.html) it will begin offering new "micro" bitcoin and ether futures to European customers next month.
+
+- **According to the New York Times,** the artificial-intelligence startup Anthropic has [raised $7.3 billion](https://www.nytimes.com/2024/02/20/technology/anthropic-funding-ai.html) in venture money and now carries a $15 billion valuation. However, some of the capital carries conditions that Anthropic spend with its own investors on products such as chips and cloud hosting. There is also one big investor who's getting out altogether: FTX. The failed crypto exchange received permission from a bankruptcy court Thursday to [sell its $1 billion stake](https://decrypt.co/218675/ftx-anthropic-ai-shares-sell-bankruptcy-recovery) in Anthropic in order to repay creditors.
+
+- **Microsoft** plans to invest $2.1 billion in Spain over the next two years to expand its AI and cloud infrastructure. ([Decrypt](https://decrypt.co/218258/microsoft-invests-2-billion-in-ai-cloud-in-spain))
+
+- **A Montenegro court** ruled that Terraform Labs founder Do Kwon should be extradited to the U.S. to face fraud charges in connection with the collapse of the company's TerraUSD and Luna tokens in May 2022. Kwon is expected to appeal the decision. ([Wall Street Journal](https://www.msn.com/en-us/news/world/crypto-tycoon-do-kwon-should-be-extradited-to-u-s-montenegro-court-rules/ar-BB1iFlDu))
+
+- **The exchange FixedFloat suffered a security breach** in which nearly $26 million in bitcoin and ether was stolen from customer accounts.  ([The Merkle](https://themerkle.com/cryptocurrency-exchange-fixedfloat-compromised-millions-lost-in-ethereum-and-bitcoin/))
 
 - **Crypto attorney John Deaton** announced he's running for U.S. senate against incumbent Elizabeth Warren, a vocal critic of the industry. He faces long odds against the popular Massachusetts Democrat. ([Boston Globe](https://www.msn.com/en-us/news/politics/john-deaton-crypto-attorney-and-commentator-launches-republican-bid-against-elizabeth-warren/ar-BB1izUnB)) <!-- Additional coverage from Bitcoinist: https://bitcoinist.com/pro-xrp-lawyer-enters-senate-race/ -->
 
 - **Hong Kong's legislative council** will soon consider new legislation to regulate stablecoins and over-the-counter trading of digital assets. ([CoinDesk](https://www.coindesk.com/policy/2024/02/21/hong-kong-doubles-down-on-stablecoin-otc-rules-promise/))
 
-- **Walmart said** it is expanding availability of Pudgy Penguins toys linked to an Ethereum-based interactive platform. ([The Block](https://www.theblock.co/post/278347/walmart-pudgy-penguins-expansion))
-
-- **Solana developers in Salt Lake City** have been enthusiastic early users of Apple's expensive new headset, the Vision Pro. ([CoinDesk](https://www.coindesk.com/culture/2023/02/15/apple-vision-pros-are-practically-dress-code-at-this-crypto-hacker-house))
-
 # Odds & Ends
 
-- tk <!-- Draft: The Statewide News Collective, a community of practice for independent news organizations, has launched an impact research project with Montana Free Press, New Hampshire Public Radio, and Bridge Michigan. Led by George Washington University professor Danny Hayes, the project will measure the community and civic benefits of statewide accountability newsrooms. Each organization will receive an $8,000 grant for their participation and a detailed report on the impact of their work. The research aims to better understand the broader community and civic benefits of statewide journalism and create a publicly available resource for other organizations. --> [tk](https://www.lenfestinstitute.org/institute-news/statewide-news-collective-launches-impact-research-project/)  
+- **Walmart said** it is expanding availability of Pudgy Penguins toys linked to an Ethereum-based interactive platform. ([The Block](https://www.theblock.co/post/278347/walmart-pudgy-penguins-expansion))
 
 - **The population of Monarch butterflies** along California's coast is [down 95%](https://xerces.org/blog/western-monarch-count-tallies-233394-butterflies) compared to 1980s, acording to a year-end count by the Xerces Society, a conservation nonprofit.
 
