Rewriting lede item

--- a/newsletter/2024-02-25.md
+++ b/newsletter/2024-02-25.md
@@ -1,26 +1,23 @@
-# Why so many Benjamins, America?
+# ETH leads a quieter week of crypto gains
 ## Feb. 18-24, 2024
 
-![Collage of $100 bills](https://images.unsplash.com/photo-1593672755342-741a7f868732)
-*Photo by Giorgio Trovato on Unsplash*
+![Physical ETH token on a computer motherboard](https://images.unsplash.com/photo-1641580543317-4cea85891afe)
+*Photo by Michael Förtsch via Unsplash*
 
-**The $100 bill** is now America's most popular cash denomination, with more of them in circulation than even the venerable $1 note bearing George Washington's likeness.
-
-So says the Wall Street Journal's Oyin Adedoyin in a [new story](https://www.wsj.com/personal-finance/american-dollar-currency-100-bill-c6a47c79?st=02dgeljm8vby6zg&reflink=desktopwebshare_permalink) about the [c-note](https://www.investopedia.com/terms/c/c-note.asp)'s meteoric rise. Adedoyin reports that more than half the supply of $100 bills is held abroad, and there are enough $100 bills circulating in the U.S. for every living citizen to have 55 of them.
-
-Let it also suffice that all these bills aren't being spent to treat someone's local Little League team at McDonald's.
-
-
-
-# Week in Review
+**Even in a relatively subdued week of trading,** the token market saw some important milestones:
 
 - **Ether's price rallied above $3,000** for the first time in nearly two years. The buying was fueled in part by rising optimism that an exchange-traded fund on the token will be approved by U.S. regulators this year. ([Cointelegraph](https://cointelegraph.com/news/ethereum-eth-price-hits-3k-for-the-first-time-since-2022))
 
 - **Bitcoin was steady for the week versus the U.S. dollar,** recently trading above $51,000 per token. But rising institutional demand this year, combined with fluctuations in conventional foreign exchange markets, have recently pushed bitcoin's price to fresh all-time highs in terms of the local currencies of 14 countries. Combined, those countries have a population over 1 billion people and gross domestic product over $7 trillion a year, according to a [Twitter thread](https://twitter.com/balajis/status/1760638270462104048) Thursday by crypto investor Balaji Srinivasan. Wow...
 
-- **A Finnish software engineer** shared via GitHub a trove of previously unpublished emails between himself and mysterious bitcoin founder Satoshi Nakamoto. The messages offered a new window into Satoshi's thoughts during the early days of bitcoin development, including observations on potential regulation, energy consumption and other issues. ([Unchained](https://unchainedcrypto.com/satoshis-emails-to-a-bitcoin-co-developer-the-5-most-revealing-quotes/))
+- **Global valuation** of the token market inched above $2 trillion, up 1.5% on the week and within reach of a 2-year high, according to CoinMarketCap data.
 
-- **Solana updates:** Farcaster, a decentralized social platform, has [added support](https://www.theblock.co/post/278797/farcaster-solana) for Solana. That network's native token, which trades under the ticker SOL, is now the world's fifth-largest by market valuation, according to [CoinMarketCap](https://coinmarketcap.com/currencies/solana/). Meanwhile, CoinDesk [reports](https://www.coindesk.com/culture/2023/02/15/apple-vision-pros-are-practically-dress-code-at-this-crypto-hacker-house) that Solana developers in Salt Lake City have been enthusiastic early users of Apple's expensive new headset, the Vision Pro.
+On to the week's other news...
+
+# Week in Review
+- **A Finnish engineer** shared via GitHub a trove of previously unpublished emails between himself and mysterious bitcoin founder Satoshi Nakamoto. The messages offered a new window into Satoshi's thoughts during the early days of bitcoin development, including observations on potential regulation, energy consumption and other issues. ([Unchained](https://unchainedcrypto.com/satoshis-emails-to-a-bitcoin-co-developer-the-5-most-revealing-quotes/))
+
+- **Solana updates:** , a decentralized social platform, has [added support](https://www.theblock.co/post/278797/-solana) for Solana. That network's native token, which trades under the ticker SOL, is now the world's fifth-largest by market valuation, according to [CoinMarketCap](https://coinmarketcap.com/currencies/solana/). Meanwhile, CoinDesk [reports](https://www.coindesk.com/culture/2023/02/15/apple-vision-pros-are-practically-dress-code-at-this-crypto-hacker-house) that Solana developers in Salt Lake City have been enthusiastic early users of Apple's expensive new headset, the Vision Pro.
 
 - **Circle announced** it will [phase out support](https://www.circle.com/blog/circle-is-discontinuing-support-for-usdc-on-the-tron-blockchain) for its USDC stablecoin on the TRON network due to the requirements of its internal risk-management framework.
 
