Edits to headline + copy

--- a/newsletter/2024-03-17.md
+++ b/newsletter/2024-03-17.md
@@ -1,10 +1,15 @@
-# Good luck getting Congress to fix web2.
-## March 10-16, 2024
+# Congress isn't going to fix web2.
+## The new TikTok bill shows why. Better for devs and users to take it upon ourselves to build new networks.
+### March 10-16, 2024
 
 ![Smartphone with social icons on a wooden table](https://w3w.news/img/nathan-dumlao-1920.jpg)
 *Photo by Nathan Dumlao via Unsplash*
 
 <!-- Lede item. Should run ~450 words.
+
+**Someone please remind me again.** Why does regulating web2 make more sense than replacing it?
+
+
 
 CNOOC port deal example.
 
