fleshing out news summary items

--- a/newsletter/2024-03-17.md
+++ b/newsletter/2024-03-17.md
@@ -1,87 +1,58 @@
 # Congress isn't going to fix web2.
 ## The new TikTok bill shows why. Better for devs and users to take it upon ourselves to build new networks.
-### March 10-16, 2024
 
 ![Smartphone with social icons on a wooden table](https://w3w.news/img/nathan-dumlao-1920.jpg)
 *Photo by Nathan Dumlao via Unsplash*
 
-<!-- Lede item. Should run ~450 words.
+<!--
+
+Lede item. Should run ~450 words.
 
 **Someone please remind me again.** Why does regulating web2 make more sense than replacing it?
-
-
 
 CNOOC port deal example.
 
 - It violates the First Amendment rights of the users.
 
-- The question of who owns a social network is hardly. All they have to do is use it to spread disinformation. "mendacious f*&^ks"
+- The question of who owns a social network is hardly the most important thing that matters. All they have to do is use it to spread disinformation.
 
-Farcaster panel: You're identity travels with you.
+- Galloway: "mendacious f*&^ks"
 
-Shout out Dixon.
+- Farcaster panel as a positive alternative: "You're identity travels with you." Take verbatim from moderator around 19-minute mark at https://www.youtube.com/watch?v=yVNvQpDGu5g
 
-Lede item. Should run ~450 words.
-
-Some possibilities:
-
-- GOODLUCK: Good luck getting Congress to fix web2. The TikTok imbroglio demonstrates why regulation alone won't fix our problems.
-
-- AI: Interesecting with crypto.
-
-- Ethereum has real network effects.
-
-- The real challenge for any other layer-1 chain now is no longer technical. It's not enough to out-perform Ethereum computationally; you have to build a community and real network effects. They're engineer-driven.
-
-- Technical analysis is bullshit.
-
-Doctorow rant re: vice: https://doctorow.medium.com/vice-surrenders-ce659810bc9f
-
-Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
-
-- Worrisome examples: CoinDesk column by lawer who's skeptical of WLD  and FET.
-
-- Chris Dixon offering a great theoretical example in his new book.
-
-- An actual: Brave integrating into its browser. Story on Leo: https://www.theverge.com/2023/11/2/23943193/brave-leo-ai-assistant-chatbot-release-date-price
-
-- Taking my own GitHub repo private due to concerns about AI.
+- Shout out Dixon book.
 
 -->
 
-# Week in Review
-
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
-
-- Market wrap, new bitcoin records, etc. <!-- Need links -->
-
-- Coinshares buying Valkyrie ETF biz. <!-- Need link -->
-
-- UK allowing bitcoin ETFs for institutions. <!-- Need link -->
-
-- Binance updates: https://www.wsj.com/articles/binance-became-the-biggest-cryptocurrency-exchange-without-licenses-or-headquarters-thats-coming-to-an-end-11636640029?st=fx27r2iyjpi9iua&reflink=desktopwebshare_permalink |
+### Week in Review: March 10-16, 2024
 
 - Ethereum upgrade. <!-- Need links -->
 
+- **Token prices took a volatile ride.** Bitcoin hit a new record above TKTKTK on TKTKTK, but then a wave of profit-taking took over, sending the market to a loss for the week as a whole. As of late Friday trading in New York, bitcoin posted a weekly decline of TKTKTK%. Ethereum was down TKTKTK. Global crypto market cap fell TKTK% to TKTKTK trillion.
+
 - https://www.wsj.com/finance/currencies/hot-new-bitcoin-funds-are-still-waiting-for-buy-in-from-financial-advisers-4a470ada?st=a7ildg5woxl54dw&reflink=desktopwebshare_permalink
 
-- https://www.wired.com/story/craig-wright-not-satoshi-nakamoto-bitcoin-creator-ruling/?mbid=social_twitter
+- Coinshares buying Valkyrie ETF biz. <!-- Need link -->
 
-# Odds & Ends
+- El Salvador has more bitcoin than previously known. <!-- Need link -->
 
-- Bitcoin vs Gold: https://charts.woobull.com/bitcoin-vs-gold
+- **Big bitcoin developments in Britain:** Ruling against Craig Wright https://www.wired.com/story/craig-wright-not-satoshi-nakamoto-bitcoin-creator-ruling/?mbid=social_twitter | UK allowing bitcoin ETFs for institutions. <!-- Need link -->
 
-- https://www.salon.com/2024/03/11/earths-ice-caps-are-in-serious-trouble-three-new-studies-reveal-how-the-damage-is/
+- **BTC vs Gold:** Drake sharing btc video. https://www.coindesk.com/business/2024/03/12/rapper-drake-posts-michael-saylors-bitcoin-video-to-his-146m-instagram-followers/ | Bitcoin vs Gold: https://charts.woobull.com/bitcoin-vs-gold
 
-- **"It is hard to imagine a civilization without onions."** -- [Julia Child](https://www.salon.com/2024/03/11/common-but-not-ordinary-why-its-hard-to-imagine-a-civilization-without-onions/)
+- Binance updates: https://www.wsj.com/articles/binance-became-the-biggest-cryptocurrency-exchange-without-licenses-or-headquarters-thats-coming-to-an-end-11636640029?st=fx27r2iyjpi9iua&reflink=desktopwebshare_permalink |
+
+### Odds & Ends
+
+- **Three recent studies paint a dire outlook** for Earth's ice caps due to rising temperatures at both poles. One predicts ice-free summers in the Arctic Ocean by 2050, regardless of whether nations meet emissions-reduction targets set in the Paris climate accords. Another study shows a dramatic increase in Antarctic polynyas, or pockets of open water that can exist within sea ice. A third study reveals that Arctic sea life has not benefited as expected from the loss of sea ice so far. Ugh. ([Salon](https://www.salon.com/2024/03/11/earths-ice-caps-are-in-serious-trouble-three-new-studies-reveal-how-the-damage-is/))
+
+- *"It is hard to imagine a civilization without onions."* -- [Julia Child](https://www.salon.com/2024/03/11/common-but-not-ordinary-why-its-hard-to-imagine-a-civilization-without-onions/)
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
-_**Have a comment on the newsletter? Please share it with the hashtag #w3w on X/Twitter or LinkedIn. We'll continue the conversation there.**_ 😉
+_**Have a comment on the newsletter? Please share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
 
 _**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.media.**_
-
-<!--Move this content to standing editorial policy page on the website.     _**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_ -->
 
 _**Best wishes for a healthy and productive week ahead.**_  
 
