fleshing out lead item

--- a/newsletter/2024-03-17.md
+++ b/newsletter/2024-03-17.md
@@ -4,8 +4,42 @@
 ![Smartphone with social icons on a wooden table](https://w3w.news/img/nathan-dumlao-1920.jpg)
 *Photo by Nathan Dumlao via Unsplash*
 
+**Americans should have learned by now** that we can't defend our country by shredding our own Constitution. If our adversaries are adversaries in the first place because ["they hate our freedoms,"](https://www.youtube.com/watch?v=-PKRHgmHzK0) in the famous words our president post-9/11, then it must also be true that we do the bad guys' work for them when we trample those freedoms ourselves.
+
+Nevertheless, we seem bent on continuing to try. Hence the latest bill making its way through Congress to [force a sale](https://www.washingtonpost.com/technology/2024/03/15/tiktok-ban-senate-slows-vote-bytedance/) of Chinese-owned ByteDance, operator of the popular social app TikTok. If such a transaction doesn't take place within six months -- probably [an unrealistic timeframe](https://www.washingtonpost.com/technology/2024/03/17/tiktok-sale-ban-challenges/) for such a deal compared to past tech mergers -- then TikTok would be banned in the U.S.
+
+That last condition is problematic as it directly conflicts with the First Amendment rights of [170 million Americans](https://www.washingtonpost.com/technology/2024/03/17/tiktok-sale-ban-challenges/) currently using TikTok. The ostensible reason for this is to prevent surveillance of American citizens by Chinese Communist Party authoritarians who, you know, hate things like our First Amendment.
+
+
+
+
+
+
+
+
+
+The ones that our own people one, especially Facebook.
+
+CNOOC ports. Or why you wouldn't let foreigners buy a bunch of major airports.
+
+But a social network doesn't necessarily work like those things.
+
 <!--
 
+**Ultimately, there are only three possible solutions** to the crappy conduct everyone has grown to hate from Big Tech companies like Meta, Amazon, Alphabet, and Twitter:
+
+- Regulate them.
+- Shame them into behaving better.
+- Replace them with new products and networks.
+
+It baffles me why so many people in Silicon Valley and the mainstream tech press are so dismissive of purposeful replacement -- the of the web3 movement -- while being so gung-ho on the other two.
+
+
+
+
+- Mainstream tech press, and many folks in Silicon Valley, tend to be dismissive of web3.
+
+- These same people tend to either root for legislative relief or internal improvements at the big platforms, as if they'll just act better.
 Lede item. Should run ~450 words.
 
 **Someone please remind me again.** Why does regulating web2 make more sense than replacing it?
@@ -26,9 +60,9 @@ CNOOC port deal example.
 
 ### Week in Review: March 10-16, 2024
 
-- **The Ethereum network's Dencun upgrade** went live Wednesday. The new software is designed to significantly lower transaction costs for layer-2 networks built atop Ethereum -- a longstanding headache for developers. ([Cointelegraph](https://cointelegraph.com/news/dencun-upgrade-live-ethereum-mainnet)) <!-- Need links -->
+- **The Ethereum network's Dencun upgrade** went live Wednesday. The new software is designed to significantly lower transaction costs for layer-2 networks built atop Ethereum -- a longstanding headache for developers. ([Cointelegraph](https://cointelegraph.com/news/dencun-upgrade-live-ethereum-mainnet))
 
-- **Token prices took a volatile ride.** Bitcoin hit several new records throughout the week, peaking near $74,000 per token Thursday. But then a [wave of profit-taking](https://finance.yahoo.com/news/bitcoin-retreats-record-high-bubble-031039357.html) took over, erasing all the gains and then some. As of late Friday's trading in New York, bitcoin posted a weekly decline of 0.5%. Ethereum was down 7%. But altcoins showed some strength, which helped keep the broader crypto market's valuation steady at $2.6 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/#market-cap) data.
+- **Token prices took a volatile ride.** Bitcoin hit several new records throughout the week, peaking near $74,000 per token Thursday. But then a [wave of profit-taking](https://finance.yahoo.com/news/bitcoin-retreats-record-high-bubble-031039357.html) took over, erasing all the gains and then some. As of Sunday morning in New York, bitcoin has posted a 7-day decline of 3%. Ethereum is down 8%. But altcoins are showing some strength, which has helped keep the broader crypto market's valuation steady at $2.6 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/#market-cap) data.
 
 - **Individual investors in the U.S.** have been active buyers of exchange-traded bitcoin funds since January. But financial advisors -- a key audience that manages $30 trillion in client assets -- have been more reticent. ([Wall Street Journal](https://www.wsj.com/finance/currencies/hot-new-bitcoin-funds-are-still-waiting-for-buy-in-from-financial-advisers-4a470ada?st=a7ildg5woxl54dw&reflink=desktopwebshare_permalink))
 
