--- a/newsletter/2024-03-17.md
+++ b/newsletter/2024-03-17.md
@@ -24,7 +24,7 @@ Better that Congress should write clear regulations around user rights and data 
 
 Barring a sudden outbreak of such common sense in Congress, though, I think we need to maintain focus on building [decentralized alternatives](https://coinmarketcap.com/academy/article/desoc-a-deep-dive-into-decentralized-social-networks) to web2 platforms like TikTok and Facebook. Unlike federal legislation, [web3](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814) is a separate solution -- one entirely within the power of developers and users to implement and adopt -- that cuts to the core problem of reclaiming control of our data.
 
-To put it a different way: Why should we continue to believe it makes more sense to regulate web2 than to replace it? The question becomes even more urgent when the would-be regulators reveal themselves through things like the TikTok bill to be so profoundly clueless.
+To put it a different way: Why should we continue to believe it makes more sense to regulate web2 than to replace it? The question becomes even more urgent when the would-be regulators reveal themselves, through measures like the TikTok bill, to be so profoundly clueless.
 
 ### Week in Review: March 10-16, 2024
 
