--- a/newsletter/2024-03-17.md
+++ b/newsletter/2024-03-17.md
@@ -4,7 +4,7 @@
 ![Smartphone with social icons on a wooden table](https://w3w.news/img/nathan-dumlao-1920.jpg)
 *Photo by Nathan Dumlao via Unsplash*
 
-**Americans should have learned by now** that we can't defend our country by shredding its Constitution. If our adversaries are adversaries in the first place because ["they hate our freedoms,"](https://www.youtube.com/watch?v=-PKRHgmHzK0) in the famous words our president post-9/11, then it must also be true that we do the bad guys' work for them when we steamroll those freedoms ourselves.
+**Americans should have learned by now** that we can't defend our country by shredding its Constitution. If our adversaries are adversaries in the first place because ["they hate our freedoms,"](https://www.youtube.com/watch?v=-PKRHgmHzK0) in the famous words our president post-9/11, then it must also be true that we do the bad guys' work for them when we steamroll freedoms ourselves.
 
 Still, we continue to try. Witness the new bill in Congress to [force a sale](https://www.washingtonpost.com/technology/2024/03/15/tiktok-ban-senate-slows-vote-bytedance/) of Chinese-owned ByteDance, operator of TikTok. If a sale doesn't take place within six months -- probably [an unrealistic timeframe](https://www.washingtonpost.com/technology/2024/03/17/tiktok-sale-ban-challenges/) compared to past tech mergers -- then the bill would ban TikTok in the U.S. altogether.
 
@@ -14,9 +14,9 @@ Because, you know, the CCP are authoritarians who hate things like our First Ame
 
 Makes perfect sense, no?
 
-Look, I'm skeptical of CCP influence on ByteDance myself. It's a major reason I'm not on TikTok. But many other Americans feel differently, and they have a right to participate on that platform under the First Amendment.
+Look, I'm skeptical of CCP influence on ByteDance myself. It's a major reason I'm not on TikTok. But many other Americans feel differently, and they have a right to participate on that platform under the First Amendment if they choose.
 
-It's also demonstrably true that we've had egregious privacy and safety abuses and, yes, attacks on our national security by foreign adversaries via *U.S.-based* platforms [like Facebook](https://www.washingtonpost.com/technology/2021/05/26/facebook-disinformation-russia-report/). And Congress has done almost nothing about it except occasional [grandstanding in hearings](https://www.cnn.com/tech/live-news/meta-x-discord-tiktok-snap-chiefs-testimony-senate/index.html) with tech executives.
+It's also demonstrably true that we've had egregious privacy and safety abuses and, yes, [attacks on our national security](https://www.washingtonpost.com/technology/2021/05/26/facebook-disinformation-russia-report/) by foreign adversaries via *U.S.-based* platforms like Facebook. And Congress has done almost nothing about it except occasional [grandstanding in hearings](https://www.cnn.com/tech/live-news/meta-x-discord-tiktok-snap-chiefs-testimony-senate/index.html) with tech executives.
 
 But in terms of writing laws to actually fix the situation? Zilch, except for this TikTok proposal that singles out one company and leaves all the other problematic ones untouched.
 
