Fleshing out summary items.

--- a/newsletter/2024-03-24.md
+++ b/newsletter/2024-03-24.md
@@ -20,39 +20,17 @@ Some possibilities:
 
 - **Market wrap:** https://www.cnbc.com/2024/03/20/bitcoin-btc-price-falls-as-cryptocurrencies-lose-400-billion-value.html | https://www.coindesk.com/markets/2024/03/19/bitcoin-flash-crashed-to-89k-on-bitmex/ <!-- Update Saturday -->
 
-- **BlackRock launched** a new tokenized asset fund on the Ethereum network. ([Decrypt](https://decrypt.co/222694/blackrock-ethereum-fund-buidl))
+- **Wall Street giant BlackRock** announced it will [launch a new fund](https://decrypt.co/222694/blackrock-ethereum-fund-buidl) for tokenized [real-world assets](https://decrypt.co/222694/blackrock-ethereum-fund-buidl). Dubbed BUIDL, the new offering will be built on the Ethereum network -- a first for BlackRock. Meanwhile...
 
-- **The crypto exchange OKX** is exiting India. ([The Block](https://www.theblock.co/post/284003/crypto-exchange-okx-exiting-india))
+- **Fortune reports** that the U.S. Securities and Exchange Commission has been [questioning companies](https://fortune.com/crypto/2024/03/20/sec-gary-gensler-ethereum-security-commodity-crypto-foundation/) building on Ethereum, with an eye toward possibly classifying the network's native ether token as a security. Yikes.
 
-- **The decentralized Fluence Cloudless Platform went live,** with the intention of competing with traditional infrastructure providers like AWS and Google Cloud. ([CoinDesk](https://www.coindesk.com/tech/2024/03/20/protocol-village/))
-
-- **Ethereum founder Vitalik Buterin** is pleasantly surprised by L2 usage since the Duncun upgrade. https://decrypt.co/222767/ethereum-founder-vitalik-buterin-surprised-l2-usage-dencun
-
-- **BitGo's CEO** says crypto's market structure is still "too fragile." https://www.theblock.co/post/284009/etf-custody-bitgo
-
-<!-- Everything after this point CBK -->
-
-- New gaming token suffers a $4.6 million exploit. https://www.coindesk.com/business/2024/03/21/newly-issued-gaming-token-exploited-on-blast-with-46m-drained/
-
-- CoinGecko says Solana is the "most popular" blockchain so far this year. <!-- Need a 2nd sentence on the methodology here. --> https://www.theblock.co/post/283925/solana-declared-most-popular-blockchain-so-far-this-year-by-coingecko-research
-
-- The SEC is investigating companies dealing with the Ethereum Foundation, classifying Ethereum as a security, following the shift to a new governance model. This move has complicated Ethereum's regulatory status, as the SEC considers the majority of other cryptocurrencies as securities. The SEC's stance on Ethereum has changed under Chair Gary Gensler, who has signaled that crypto assets produced by blockchains using a proof-of-stake model could be classified as securities. Recent subpoenas and court battles highlight the ongoing debate over the legal status of cryptocurrencies. The SEC has not yet approved Ethereum ETF applications, and the recent investigation could impact the CFTC's supervision of Ether futures markets. https://fortune.com/crypto/2024/03/20/sec-gary-gensler-ethereum-security-commodity-crypto-foundation/
-
-- A French energy giant is getting into altcoin mining. https://www.coindesk.com/business/2024/03/21/french-energy-giant-edf-subsidiary-becomes-chiliz-blockchain-validator/
-
-- Goldman's head of digital assets says the future is public blockchains. https://blockworks.co/news/goldman-sachs-future-public-blockchains
-
-- 15 months after FTX's meltdown, trust in web3 is higher than ever. https://www.forbes.com/sites/lawrencewintermeyer/2024/03/21/15-months-after-ftx-trust-in-web3-technology-has-never-been-stronger/
+- **They said it:** Ethereum founder Vitalik Buterin is pleasantly surprised by L2 usage since the Duncun upgrade. https://decrypt.co/222767/ethereum-founder-vitalik-buterin-surprised-l2-usage-dencun | BitGo's CEO says crypto's market structure is still "too fragile." https://www.theblock.co/post/284009/etf-custody-bitgo - Goldman's head of digital assets says the future is public blockchains. https://blockworks.co/news/goldman-sachs-future-public-blockchains
 
 - **Big moves in web3 gaming:** New 100mm web3 gaming fund: https://www.coindesk.com/web3/2024/03/19/immutable-king-river-capital-polygon-labs-set-up-100m-web3-gaming-fund/ | Sequence partnering with Google: https://cointelegraph.com/news/sequence-partners-google-cloud-simplify-web3-nft-gaming-development
 
+- **The decentralized Fluence Cloudless Platform went live,** with the intention of competing with traditional infrastructure providers like AWS and Google Cloud. ([CoinDesk](https://www.coindesk.com/tech/2024/03/20/protocol-village/))
 
-
-- DOJ sued Apple for antitrust violations. <!-- Need link -->
-
-- Starbucks is shutting down its NFT rewards program. https://mashable.com/article/starbucks-sunsets-nft-reward-program-odyssey
-
-- US crypto investors are battling the Honduran government in international court. https://theintercept.com/2024/03/19/honduras-crypto-investors-world-bank-prospera/
+- **Unfortunately, the week saw some notable product shutdowns as well:** The crypto exchange OKX is exiting India. ([The Block](https://www.theblock.co/post/284003/crypto-exchange-okx-exiting-india))  Starbucks is shutting down its NFT rewards program. https://mashable.com/article/starbucks-sunsets-nft-reward-program-odyssey
 
 ### Odds & Ends
 
@@ -71,4 +49,3 @@ _**If you would like to reach me directly with a story suggestion or anything el
 _**Best wishes for a healthy and productive week ahead.**_  
 
 _**-- Peter A. McKay**_  
-
