--- a/newsletter/2024-03-24.md
+++ b/newsletter/2024-03-24.md
@@ -1,18 +1,16 @@
-# tktktkt
-## tktktktk
+# It's the network, stupid.
+## We've been getting helpful reminders lately why open protocols beat corporate control every time.
 
-![]()
-*Photo by tk via tk*
+![Ethereum founder Vitalik Buterin](https://upload.wikimedia.org/wikipedia/commons/0/09/Vitalik_Buterin_TechCrunch_London_2015.jpg)
+*Photo by tk via tk* <!-- A placeholder image for now. Replace with an iPhone or Apple-related image. -->
 
-<!-- Lede item. Should run ~450 words.
+<!-- Riff ~450 words on protocol networks versus corporate networks, shouting out Dixon.
 
-Some possibilities:
+Transition to Apple and Ethereum news...
 
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+**Fortune reports** that the U.S. Securities and Exchange Commission has been [questioning companies](https://fortune.com/crypto/2024/03/20/sec-gary-gensler-ethereum-security-commodity-crypto-foundation/) building on Ethereum, with an eye toward possibly classifying the network's native ether token as a security under the Securities and Exchange Act of 1933.
 
-- DIXONRIFF: His observation about protocol networks versus corporate networks is worth fleshing out. It's something you won't hear in mainstream tech media.
-
-- AI: Interesecting with crypto. Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
+Trasition out with allusion to product networks.
 
 -->
 
@@ -20,9 +18,7 @@ Some possibilities:
 
 - **Market wrap:** https://www.cnbc.com/2024/03/20/bitcoin-btc-price-falls-as-cryptocurrencies-lose-400-billion-value.html | https://www.coindesk.com/markets/2024/03/19/bitcoin-flash-crashed-to-89k-on-bitmex/ <!-- Update Saturday -->
 
-- **Wall Street giant BlackRock** announced it will [launch a new fund](https://decrypt.co/222694/blackrock-ethereum-fund-buidl) for tokenized [real-world assets](https://decrypt.co/222694/blackrock-ethereum-fund-buidl). Dubbed BUIDL, the new offering will be built on the Ethereum network -- a first for BlackRock. Meanwhile...
-
-- **Fortune reports** that the U.S. Securities and Exchange Commission has been [questioning companies](https://fortune.com/crypto/2024/03/20/sec-gary-gensler-ethereum-security-commodity-crypto-foundation/) building on Ethereum, with an eye toward possibly classifying the network's native ether token as a security. Yikes.
+**Wall Street giant BlackRock** announced it will [launch a new fund](https://decrypt.co/222694/blackrock-ethereum-fund-buidl) for tokenized [real-world assets](https://decrypt.co/222694/blackrock-ethereum-fund-buidl). Dubbed BUIDL, the new offering will be built on the Ethereum network -- a first for BlackRock.
 
 - **They said it:** Ethereum founder Vitalik Buterin is pleasantly surprised by L2 usage since the Duncun upgrade. https://decrypt.co/222767/ethereum-founder-vitalik-buterin-surprised-l2-usage-dencun | BitGo's CEO says crypto's market structure is still "too fragile." https://www.theblock.co/post/284009/etf-custody-bitgo - Goldman's head of digital assets says the future is public blockchains. https://blockworks.co/news/goldman-sachs-future-public-blockchains
 
