Updating summary items

--- a/newsletter/2024-03-24.md
+++ b/newsletter/2024-03-24.md
@@ -1,8 +1,8 @@
 # It's the network, stupid.
-## We've been getting helpful reminders lately why open protocols beat corporate control every time.
+## We've been getting helpful reminders lately why open protocols usually beat corporate control.
 
-![Ethereum founder Vitalik Buterin](https://upload.wikimedia.org/wikipedia/commons/0/09/Vitalik_Buterin_TechCrunch_London_2015.jpg)
-*Photo by tk via tk* <!-- A placeholder image for now. Replace with an iPhone or Apple-related image. -->
+![latticework illustration](https://unsplash.com/photos/low-angle-photography-of-metal-structure-ZiQkhI7417A)
+*Photo by Alina Grubnyak via Unsplash*
 
 <!-- Riff ~450 words on protocol networks versus corporate networks, shouting out Dixon.
 
@@ -18,9 +18,9 @@ Trasition out with allusion to product networks.
 
 - **Market wrap:** https://www.cnbc.com/2024/03/20/bitcoin-btc-price-falls-as-cryptocurrencies-lose-400-billion-value.html | https://www.coindesk.com/markets/2024/03/19/bitcoin-flash-crashed-to-89k-on-bitmex/ <!-- Update Saturday -->
 
-- **Wall Street giant BlackRock** announced it will [launch a new fund](https://decrypt.co/222694/blackrock-ethereum-fund-buidl) for tokenized [real-world assets](https://decrypt.co/222694/blackrock-ethereum-fund-buidl). Dubbed BUIDL, the new offering will be built on the Ethereum network -- a first for BlackRock.
+- **Wall Street giant BlackRock** announced it will [launch a new fund](https://decrypt.co/222694/blackrock-ethereum-fund-buidl), dubbed BUIDL, for tokenized [real-world assets](https://decrypt.co/222694/blackrock-ethereum-fund-buidl). The new offering will be built on the Ethereum network -- a first for BlackRock.
 
-- **They said it:** Ethereum founder Vitalik Buterin is pleasantly surprised by L2 usage since the Duncun upgrade. https://decrypt.co/222767/ethereum-founder-vitalik-buterin-surprised-l2-usage-dencun | BitGo's CEO says crypto's market structure is still "too fragile." https://www.theblock.co/post/284009/etf-custody-bitgo - Goldman's head of digital assets says the future is public blockchains. https://blockworks.co/news/goldman-sachs-future-public-blockchains
+- **They said it:** Ethereum co-founder Vitalik Buterin said the platform's usage by layer-2 networks has been ["interestingly low"](https://decrypt.co/222767/ethereum-founder-vitalik-buterin-surprised-l2-usage-dencun) since Ethereum's recent Dencun upgrade. Mike Belshe, co-founder and CEO of crypto custodian BitGo, says the token market's structure is still ["too fragile."](https://www.theblock.co/post/284009/etf-custody-bitgo). And Mathew McDermott, Goldman Sachs head of digital assets, is [bullish](https://blockworks.co/news/goldman-sachs-future-public-blockchains) on the future of public blockchains.
 
 - **Big moves in web3 gaming:** New 100mm web3 gaming fund: https://www.coindesk.com/web3/2024/03/19/immutable-king-river-capital-polygon-labs-set-up-100m-web3-gaming-fund/ | Sequence partnering with Google: https://cointelegraph.com/news/sequence-partners-google-cloud-simplify-web3-nft-gaming-development
 
