--- a/newsletter/2024-03-24.md
+++ b/newsletter/2024-03-24.md
@@ -4,7 +4,7 @@
 ![latticework illustration](https://images.unsplash.com/photo-1545987796-200677ee1011)
 *Photo by Alina Grubnyak via Unsplash*
 
-**Venture investor Chris Dixon** gets many things right in his recent book, a purposefully layman-friendly intro to web3 titled [Read Write Own](https://www.amazon.com/s?k=chris+dixon+read+write+own&ref=nb_sb_ss_ts-doa-p_2_12). But two ideas in particular stood out to me:
+**Venture investor Chris Dixon** gets many, many things right in his recent book, a purposefully layman-friendly intro to web3 titled [Read Write Own](https://www.amazon.com/s?k=chris+dixon+read+write+own&ref=nb_sb_ss_ts-doa-p_2_12). Two ideas in particular stood out to me:
 
 1. **He repeatedly puts blockchain tech in context** of the internet's longer history and the services currently used by millions of consumers.  
 
@@ -16,11 +16,25 @@ Corporate-run networks tend to lack most or all of these characteristics. Think 
 
 Building a sustainable business atop such a network can be difficult in the long run because the corporate overlord can make changes to the network at any time that upend your operation. Dixon also points out that corporate operators over time tend to increase their "take rates," or fees charged to smaller players for using the network, sometimes to prohibitive levels.
 
-<!-- Transition to Apple news... -->
+Dixon, like many other web3 advocates, sees such technology as an opportunity to return power to consumers and developers through open protocols. If the strategy works, it would effectively [revive](https://peteramckay.medium.com/back-to-the-future-with-web-3-0-bf28614e6c55) some of the early promise of the internet from the 1990s dotcom era.
 
-<!-- Ferriss "volcano" transcript: https://tim.blog/2018/02/06/the-tim-ferriss-show-transcripts-how-to-build-popular-podcasts-and-blogs/ -->
+If you're old enough to remember that time, you know we somehow got lost along the way to the egalitarian future we thought would be our destination.
 
-<!-- Kicker -->
+Helpfully, the U.S. Department of Justice, along with 16 states' attorneys general, reminded us of that very clearly Thursday when they [sued Apple](https://www.msn.com/en-us/news/technology/justice-department-16-ags-sue-apple-for-monopolizing-smartphone-market/ar-BB1kiKOb) for federal antitrust violations in building its juggernaut iPhone business.
+
+The Verge's Lauren Feiner [points out](https://www.theverge.com/2024/3/22/24109033/doj-apple-antitrust-lawsuit-legal-expert-praise) that government's blockbuster civil complaint seems to have taken some cues from an earlier, mostly unsuccessful suit brought by developer Epic Games against Apple alleging anticompetitive practices.
+
+Epic's suit centered on Apple's requirement that third-party developers use its proprietary in-app purchases feature, which gives Apple a 30% take of all sales on an iPhone app, as a condition of being listed in the company's App Store.
+
+Feiner notes that the latest suit by DOJ and the states also takes a dim view of that practice. But it wraps in several other iPhone issues as well, such as its infamous incompatibility with Android messaging, to depict a broader pattern of antitrust violations by Apple.
+
+However this case turns out, it's good to see the government finally figuring out something tech entrepreneurs realized a long time ago. For example, I was reminded this week of a colorful anecdote podcaster Tim Ferriss shared on [an episode](https://tim.blog/2018/02/06/the-tim-ferriss-show-transcripts-how-to-build-popular-podcasts-and-blogs/) of his show in 2018:
+
+*I asked... someone I met who had a very successful business based on Facebook what it was like. He said: "It’s like owning the most profitable McDonald's in the world on top of an active volcano. You just don’t know when it’s gonna change, when it’s gonna erupt, when your business is gonna vaporize. And a lot of people have seen that. And I still use Facebook. I think it’s tremendously useful. It has ten times the click-through rate of many of the other social platforms that I’ve experimented with, so it still has a very high utility for me.*
+
+*"However, as someone who focuses on risk mitigation and controlling as many variables as possible, I like email and the last few years have doubled and tripled and quadrupled down on that focus. Why? Because that direct means of communication cannot easily be taken away from me, and I can switch email service providers. There’s a flexibility and persistence with that that you just don’t have as a guarantee on social-media platforms."*
+
+Exactly. Those power dynamics are why we still urgently need open protocols to succeed, to offer an alternative to proprietary corporate networks. Perhaps more than ever.
 
 ### Week in Review: March 17-23, 2024
 
